Enhance page headers with unique styles for About, Contact, Features, and Resources sections; update JavaScript for improved waitlist modal functionality and error handling.

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     </header>
     
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header about-header">
         <div class="container">
             <h1>We Are Your Voice</h1>
             <p>Learn about our mission, vision, and the team behind Schoolpast.ng</p>
@@ -54,7 +54,7 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h2>Our Story</h2>
-                    <p>Schoolpast.ng was with a vision to revolutionize the educational experience for Nigerian students through technology, community, and transparency.</p>
+                    <p>Schoolpast.ng was founded with a vision to revolutionize the educational experience for Nigerian students through technology, community, and transparency.</p>
                     <p>After witnessing firsthand the challenges faced by students across Nigeria, from limited access to quality educational materials to inadequate financial support, Arinze set out to create a comprehensive solution that addresses these issues.</p>
                     <p>Today, Schoolpast.ng stands as an innovative digital platform designed to serve as the voice and hub for Nigerian students, amalgamating educational resources, social networking, institutional feedback mechanisms, and financial aid opportunities into a single, user-friendly application.</p>
                 </div>
