--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header contact-header">
         <div class="container">
             <h1>Let's Hear From You</h1>
             <p>Get in touch with the Schoolpast.ng team</p>
