--- a/features.html
+++ b/features.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header features-header">
         <div class="container">
             <h1>What We Give You</h1>
             <p>Discover the powerful tools and resources that make Schoolpast.ng the ultimate platform for Nigerian students</p>
