--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header resources-header">
         <div class="container">
             <h1>Educational Resources</h1>
             <p>Access a wealth of educational materials to support your academic journey</p>
