--- a/index.html
+++ b/index.html
@@ -201,11 +201,13 @@
             <div class="testimonials-slider">
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>"Schoolpast.ng has transformed how I study and connect with other students across Nigeria. The platform is intuitive and provides exactly what I need."</p>
+                        <p>"I'm excited about how Schoolpast.ng will transform the way we study and connect with other students across Nigeria. The platform's features look exactly like what we need!"</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <img src="https://via.placeholder.com/60x60/f5f5f5/cccccc?text=CA" alt="Chioma A.">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#0a7c2e" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/>
+                            </svg>
                         </div>
                         <div class="author-info">
                             <p class="author-name">Chioma A.</p>
@@ -215,11 +217,13 @@
                 </div>
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>"Finding scholarships was so difficult until I discovered Schoolpast.ng. Now I've secured funding for my education and can focus on my studies."</p>
+                        <p>"The scholarship discovery feature on Schoolpast.ng looks promising! As a student seeking financial aid, I believe this platform will make finding opportunities much easier."</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <img src="https://via.placeholder.com/60x60/f5f5f5/cccccc?text=IM" alt="Ibrahim M.">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#0a7c2e" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/>
+                            </svg>
                         </div>
                         <div class="author-info">
                             <p class="author-name">Ibrahim M.</p>
@@ -229,11 +233,13 @@
                 </div>
                 <div class="testimonial-card">
                     <div class="testimonial-content">
-                        <p>"The past questions repository helped me ace my exams. This platform is a game-changer for Nigerian students looking to excel academically!"</p>
+                        <p>"The past questions repository preview looks incredible! This platform will be a game-changer for Nigerian students preparing for exams. Can't wait for the launch!"</p>
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <img src="https://via.placeholder.com/60x60/f5f5f5/cccccc?text=DO" alt="David O.">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#0a7c2e" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/>
+                            </svg>
                         </div>
                         <div class="author-info">
                             <p class="author-name">David O.</p>
