--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="nav-buttons">
                     <a href="login.html" class="login-link">Login</a>
-                    <a href="signup.html" class="button primary-button">Get Started</a>
+                    <a href="#" class="button primary-button" onclick="showModal(); return false;">Join Our Waiting List</a>
                 </div>
                 <div class="mobile-menu-button">
                     <span></span>
@@ -54,7 +54,7 @@
             <div class="contact-grid">
                 <div class="contact-info">
                     <h2>Get in Touch</h2>
-                    <p>Have questions about Schoolpast.ng? We're here to help! Fill out the form and our team will get back to you as soon as possible.</p>
+                    <p>You can join our waitlist by clicking the "Join Our Waiting List" button and entering your email address. It's quick and free!</p>
                     
                     <div class="contact-methods">
                         <div class="contact-method">
@@ -237,6 +237,40 @@
             <div class="cookie-buttons">
                 <button id="cookie-accept" class="cookie-button accept">Accept</button>
                 <button id="cookie-settings" class="cookie-button settings">Decline</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Waitlist Modal -->
+    <div class="modal-overlay" id="waitlistModal">
+        <div class="modal-container">
+            <div class="modal-content">
+                <button class="modal-close" id="closeModal">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+                <div class="modal-header">
+                    <h2>Join Our Waitlist</h2>
+                    <p>Be the first to know when we launch</p>
+                </div>
+                <form class="modal-form" id="waitlistForm">                    
+                    <div class="form-group">
+                        <label for="waitlist-email">Email Address</label>
+                        <input type="email" id="waitlist-email" name="email" placeholder="Enter your email" required>
+                    </div>                    
+                    <button type="submit" class="button primary-button full-width">Join Waitlist</button>
+                </form>
+            </div>
+            <div class="modal-image">
+                <div class="modal-image-content">
+                    <h3>Join our community</h3>
+                    <p>Connect with students across Nigeria</p>
+                    <div class="stats">
+                        <div class="stat-item">
+                            <span class="stat-number">5,000+</span>
+                            <span class="stat-label">Waitlist</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
