--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="nav-buttons">
                     <a href="login.html" class="login-link">Login</a>
-                    <a href="signup.html" class="button primary-button">Get Started</a>
+                    <a href="#" class="button primary-button" onclick="showModal(); return false;">Join Our Waiting List</a>
                 </div>
                 <div class="mobile-menu-button">
                     <span></span>
@@ -262,7 +262,7 @@
             <div class="cta-content">
                 <h2>Ready to join your school community?</h2>
                 <p>Join thousands of Nigerian students already on the Beta waitlist Launch to enhance their educational journey.</p>
-                <a href="signup.html" class="button cta-button">Get Started for Free</a>
+                <a href="#" class="button cta-button" onclick="showModal(); return false;">Join Our Waiting List</a>
             </div>
         </div>
     </section>
