--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                             </svg>
                             <span class="search-label-text">My school</span>
                         </div>
-                        <input type="text" id="school-search" placeholder="Enter your school name">
+                        <input type="text" id="school-search" list="schools-list" placeholder="Enter your school name">
+                        <datalist id="schools-list"></datalist>
                         <button class="search-button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
                         </button>
