Revise about.html to update the company description, emphasizing Schoolpast.ng as Nigeria's first all-in-one student life platform. The new content highlights the mission to empower students and improve accountability in education, while maintaining the overall layout and structure.

--- a/about.html
+++ b/about.html
@@ -53,8 +53,9 @@
             <div class="about-grid">
                 <div class="about-content">
                     <h2>Our Story</h2>
-                    <p>Schoolpast.ng was founded with a vision to revolutionize the educational experience for Nigerian students through technology, community, and transparency.</p>
-                    <p>After witnessing firsthand the challenges faced by students across Nigeria, from limited access to quality educational materials to inadequate financial support, Arinze set out to create a comprehensive solution that addresses these issues.</p>
+                    <!-- <p>Schoolpast.ng was founded with a vision to revolutionize the educational experience for Nigerian students through technology, community, and transparency.</p> -->
+                    <p><b>Schoolpast.ng</b> is Nigeria's first all-in-one student life platform — a digital space built to amplify the voice of students and improve accountability across educational institutions. Our mission is simple: <b>empower students, expose inefficiencies, and create a supportive academic ecosystem.</b></p>
+                    <p>After witnessing firsthand the challenges faced by students across Nigeria, from limited access to quality educational materials to inadequate financial support, we set out to create a comprehensive solution that addresses these issues.</p>
                     <p>Today, Schoolpast.ng stands as an innovative digital platform designed to serve as the voice and hub for Nigerian students, amalgamating educational resources, social networking, institutional feedback mechanisms, and financial aid opportunities into a single, user-friendly application.</p>
                 </div>
                 <div class="about-image" style="width: 100%; max-width: 800px; margin: 0 auto;">
