Refactor footer layout and styles across multiple pages for consistency and improved responsiveness. Update contact and FAQ sections with enhanced content and interactive features, including an accordion for FAQs. Add new styles for better visual appeal and user experience.

--- a/resources.html
+++ b/resources.html
@@ -310,7 +310,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-top">
+            <div class="footer-grid">
                 <div class="footer-column">
                     <div class="footer-logo">
                         <img src="schoolpastlogo.png" alt="Schoolpast.ng Logo" class="logo-img-footer">
