--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
+     <!-- Footer -->
+     <footer class="footer">
         <div class="container">
-            <div class="footer-top">
+            <div class="footer-grid">
                 <div class="footer-column">
                     <div class="footer-logo">
                         <img src="schoolpastlogo.png" alt="Schoolpast.ng Logo" class="logo-img-footer">
