Update feature showcase images and add Student Petitions section to features.html. Replace static image sources with relative paths for better organization and introduce new content highlighting the Student Petitions platform, enhancing user engagement and information clarity.

--- a/features.html
+++ b/features.html
@@ -65,7 +65,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="herobg.jpg" height="10" alt="Educational Resources">
+                    <img src="./Resources/images/educational-resources.jpg" height="10" alt="Educational Resources">
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="/herobg.jpg" alt="Social Networking">
+                    <img src="./Resources/images/social-networking.jpg" alt="Social Networking" width="800">
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="https://via.placeholder.com/600x400/f5f5f5/cccccc?text=Institutional+Feedback" alt="Institutional Feedback">
+                    <img src="./Resources/images/institutional-feedback.jpg" alt="Institutional Feedback">
                 </div>
             </div>
 
@@ -125,7 +125,31 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="https://via.placeholder.com/600x400/f5f5f5/cccccc?text=Financial+Aid" alt="Financial Aid">
+                    <img src="./Resources/images/financial-aid.jpg" alt="Financial Aid">
+                </div>
+            </div>
+
+            <div class="feature-showcase-item">
+                <div class="feature-showcase-content">
+                    <div class="feature-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                            <path d="M2 17l10 5 10-5"></path>
+                            <path d="M2 12l10 5 10-5"></path>
+                        </svg>
+                    </div>
+                    <h2>Student Petitions</h2>
+                    <p>Create and support petitions to drive positive change in your institution and the Nigerian education system.</p>
+                    <ul class="feature-list">
+                        <li>Launch petitions for institutional reforms and improvements</li>
+                        <li>Support causes that matter to the student community</li>
+                        <li>Track petition progress and institutional responses</li>
+                        <li>Connect with like-minded students across institutions</li>
+                        <li>Amplify your voice through collective action</li>
+                    </ul>
+                </div>
+                <div class="feature-showcase-image">
+                    <img src="./Resources/images/student-petitions.jpg" alt="Student Petitions Platform" loading="lazy">
                 </div>
             </div>
         </div>
@@ -199,6 +223,11 @@
                             <td><span class="cross">✗</span></td>
                         </tr>
                         <tr>
+                            <td>Student Petition System</td>
+                            <td><span class="check">✓</span></td>
+                            <td><span class="cross">✗</span></td>
+                        </tr>
+                        <tr>
                             <td>Institutional Feedback System</td>
                             <td><span class="check">✓</span></td>
                             <td><span class="cross">✗</span></td>
@@ -209,7 +238,7 @@
                             <td><span class="partial">Partial</span></td>
                         </tr>
                         <tr>
-                            <td>Personalized Learning Experience</td>
+                            <td>Student Voice Amplification</td>
                             <td><span class="check">✓</span></td>
                             <td><span class="cross">✗</span></td>
                         </tr>
