--- a/features.html
+++ b/features.html
@@ -105,7 +105,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="./Resources/images/institutional-feedback.jpg" alt="Institutional Feedback">
+                    <img src="Resources/images/institutional-feedback.jpg" alt="Institutional Feedback">
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="./Resources/images/financial-aid.jpg" alt="Financial Aid">
+                    <img src="Resources/images/financial-aid.jpg" alt="Financial Aid">
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="./Resources/images/student-petitions.jpg" alt="Student Petitions Platform" loading="lazy">
+                    <img src="Resources/images/student-petitions.jpg" alt="Student Petitions Platform" loading="lazy">
                 </div>
             </div>
         </div>
