Update image path in features.html to use a relative link for the institutional feedback image, ensuring consistency in resource management across the feature showcase.

--- a/features.html
+++ b/features.html
@@ -105,7 +105,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="Resources/images/institutional-feedback.jpg" alt="Institutional Feedback">
+                    <img src="./Resources/images/institutional-feedback.jpg" alt="Institutional Feedback">
                 </div>
             </div>
 
