--- a/features.html
+++ b/features.html
@@ -145,7 +145,7 @@
                         <li>Support causes that matter to the student community</li>
                         <li>Track petition progress and institutional responses</li>
                         <li>Connect with like-minded students across institutions</li>
-                        <li>Amplify your voice through collective action</li>
+                        <li>Amplify your voice through collective action. We stand with you.</li>
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
