Remove unused SVG background patterns

--- a/features.html
+++ b/features.html
@@ -85,7 +85,7 @@
                     </ul>
                 </div>
                 <div class="feature-showcase-image">
-                    <img src="./Resources/images/social-networking.jpg" alt="Social Networking" width="800">
+                    <img src="./Resources/images/social-networking.jpg" alt="Social Networking">
                 </div>
             </div>
 
