Update resource images and enhance video thumbnail styles in resources.html and styles.css. Adjusted image sources to use relative paths for consistency, updated JAMB Past Questions date range, and added visual effects for video tutorials.

--- a/resources.html
+++ b/resources.html
@@ -116,12 +116,12 @@
             <div class="resources-grid">
                 <div class="resource-card">
                     <div class="resource-image">
-                        <img src="Resources/images/download.png" alt="JAMB Past Questions">
+                        <img src="Resources/images/UTME.jpg" alt="JAMB Past Questions">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Past Questions</div>
-                        <h3>JAMB Past Questions (2015-2023)</h3>
-                        <p>Comprehensive collection of JAMB past questions from 2015 to 2023 with detailed solutions.</p>
+                        <h3>JAMB Past Questions (2015-2025)</h3>
+                        <p>Comprehensive collection of JAMB past questions from 2015 to 2025 with detailed solutions.</p>
                         <div class="resource-meta">
                             <span class="resource-downloads">5.2K Downloads</span>
                             <span class="resource-rating">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="resource-card">
                     <div class="resource-image">
-                        <img src="Resources/images/chemistry.jpg" alt="Chemistry Study Guide">
+                        <img src="./Resources/images/chemistry.jpg" alt="Chemistry Study Guide">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Study Materials</div>
@@ -149,8 +149,9 @@
                     </div>
                 </div>
                 <div class="resource-card">
-                    <div class="resource-image">
-                        <img src="https://via.placeholder.com/300x200/f5f5f5/cccccc?text=Mathematics+Video+Tutorials" alt="Mathematics Video Tutorials">
+                    <div class="resource-image video-thumbnail">
+                        <div class="pulse-circle"></div>
+                        <img src="./Resources/images/maths.jpg" alt="Mathematics Video Tutorials">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Video Tutorials</div>
@@ -167,7 +168,7 @@
                 </div>
                 <div class="resource-card">
                     <div class="resource-image">
-                        <img src="https://via.placeholder.com/300x200/f5f5f5/cccccc?text=WAEC+Practice+Tests" alt="WAEC Practice Tests">
+                        <img src="./Resources/images/waec.jpg" alt="WAEC Practice Tests">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Practice Tests</div>
@@ -184,7 +185,7 @@
                 </div>
                 <div class="resource-card">
                     <div class="resource-image">
-                        <img src="https://via.placeholder.com/300x200/f5f5f5/cccccc?text=Federal+Government+Scholarship" alt="Federal Government Scholarship">
+                        <img src="./Resources/images/federal-scholarship.jpg" alt="Federal Government Scholarship">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Scholarships</div>
@@ -201,7 +202,7 @@
                 </div>
                 <div class="resource-card">
                     <div class="resource-image">
-                        <img src="https://via.placeholder.com/300x200/f5f5f5/cccccc?text=Physics+Discussion+Forum" alt="Physics Discussion Forum">
+                        <img src="./Resources/images/physics-problem.jpg" alt="Physics Discussion Forum">
                     </div>
                     <div class="resource-content">
                         <div class="resource-tag">Forums & Discussions</div>
@@ -289,8 +290,8 @@
                     </ul>
                     <a href="#" class="button primary-button">Contribute Resources</a>
                 </div>
-                <div class="contribute-image">
-                    <img src="https://via.placeholder.com/500x300/f5f5f5/cccccc?text=Contribute+Resources" alt="Contribute Resources">
+                <div class="contribute-image feature-showcase-image">
+                    <img src="Resources/images/contribute.jpg" alt="Contribute Resources">
                 </div>
             </div>
         </div>
