Revamp contact section with updated header and description, and replace placeholder map

--- a/contact.html
+++ b/contact.html
@@ -277,12 +277,19 @@
     <!-- Map Section -->
     <section class="map-section">
         <div class="container">
-            <h2>Find Us</h2>
+            <div class="section-header text-left">
+                <h2>Connect With Us</h2>
+                <p class="section-description">Visit our office and experience our student-focused environment</p>
+            </div>
             <div class="map-container">
-                <!-- Replace with actual map embed code -->
-                <div class="map-placeholder">
-                    <img src="https://maps.app.goo.gl/eKPA5wWcy4mBb97G6" alt="Map location">
-                </div>
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31716.495577816506!2d3.4504166152328137!3d6.450240780967684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf452da3bd44b%3A0x47331fb41adc9d28!2sLekki%20Phase%201%2C%20Lekki%20106104%2C%20Lagos!5e0!3m2!1sen!2sng!4v1747520829753!5m2!1sen!2sng" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade"
+                    class="map-iframe">
+                </iframe>
             </div>
         </div>
     </section>
